--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
 .black {
     background-color: black;
 }
+
+button {
+    height: 20px;
+    width: 700px;
+}
+
+#buttonContainer {
+    text-align: center;
+}
